# ruse

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  ast.cc  ast.h  ast_visitor.h  check.c  check.py  codegen.c  driver.cc  eval.c  lex.c  lexer.c  lexer.h  main.c  map.c  parse.c  parse.cc  parse.h  parser.c  parser.cc  parser.h  runtime.c  ruse.h  scoped_table.h  sema.cc  sema.h  test.cc  test.ruse  test.sh  tmp.ruse  todo.txt  type.c  types.h
src/: ast.cc  ast.h  codegen.cc  driver.cc  driver.h  error.h  format.cc  lex.cc  lex.h  main.cc  parse.cc  parse.h  scoped_table.h  sema.cc  sema.h  source.cc  source.h  test.cc  types.h
test/: array.ruse  codegen.ruse  codegen_struct.ruse  decl.ruse  ffi.ruse  func.ruse  gen.ruse  gen_array.ruse  gen_func.ruse  gen_ref.ruse  gen_struct.ruse  if.ruse  ref.ruse  return.ruse  simple.ruse  string.ruse  struct.ruse  struct2.ruse  struct_abi.qbe  test.ruse  typecheck.ruse
